# react-ml-minimal-ssr-fullstack

./: README.md  bun.lockb  dune-project  package.json  reactml_ssr.opam  vite.config.js
dev-tools.locks/ocaml-lsp-server/: lock.dune
dev-tools.locks/ocamlformat/: lock.dune
dune.lock/: lock.dune  mirage-crypto-rng-lwt.pkg  promise.pkg  quickjs.pkg  server-reason-react.pkg
public/: index.html  main.js
src/client/: App.mlx  dune
src/server/: Main.ml  dune
src/server/utils/: GenerateRootTemplate.ml  dune
src/shared/js/: dune
src/shared/native/: App.mlx  Button.mlx  Counter.mlx  dune
